--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	},
 	"require": {
 		"php": ">=5.4",
+		"phpmailer/phpmailer": "~6.1",
 		"stripe/stripe-php": "^7.44",
       "ext-json": "*"
     },
