--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,3 +3,5 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/goelbookdepot
     - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
+    - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
+    - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
