--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,10 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/applications/gbdadmin/config
-    - /bin/cp -R applications/gbdadmin/config/production $DEPLOYPATH
-    - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/applications/goelbookdepot/config
-    - /bin/cp -R applications/goelbookdepot/config/production $DEPLOYPATH
+#    - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/applications/gbdadmin/config
+#    - /bin/cp -R applications/gbdadmin/config/production $DEPLOYPATH
+#    - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/applications/goelbookdepot/config
+#    - /bin/cp -R applications/goelbookdepot/config/production $DEPLOYPATH
 #    - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/
 #    - /bin/cp -R applications $DEPLOYPATH
 #    - /bin/cp -R assets $DEPLOYPATH
@@ -13,3 +13,5 @@ deployment:
 #    - /bin/cp -R vendor $DEPLOYPATH
 #    - /bin/cp -R admin.php $DEPLOYPATH
 #    - /bin/cp -R index.php $DEPLOYPATH
+     - export DEPLOYPATH=/home/fzowb5l8q1uk/public_html/applications/goelbookdepot
+     - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
