--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,14 +5,15 @@ deployment:
 #    - /bin/cp -R applications/gbdadmin/config/production $DEPLOYPATH
 #    - export DEPLOYPATH=/home/x447x173y962/public_html/applications/goelbookdepot/config
 #    - /bin/cp -R applications/goelbookdepot/config/production $DEPLOYPATH
-#    - export DEPLOYPATH=/home/x447x173y962/public_html/
+    - export DEPLOYPATH=/home/x447x173y962/public_html/
 #    - /bin/cp -R applications $DEPLOYPATH
-#    - /bin/cp -R assets $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
 #    - /bin/cp -R system $DEPLOYPATH
 #    - /bin/cp -R tests $DEPLOYPATH
 #    - /bin/cp -R vendor $DEPLOYPATH
 #    - /bin/cp -R admin.php $DEPLOYPATH
 #    - /bin/cp -R index.php $DEPLOYPATH
      - export DEPLOYPATH=/home/x447x173y962/public_html/applications/goelbookdepot
-#     - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
+     - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
+     - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
      - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
