--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,9 +4,9 @@ deployment:
       - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/goelbookdepot
       - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
       - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
+      - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
 #    - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test
 #    - /bin/cp -R vendor $DEPLOYPATH
-#    - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
 #    - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/gbdadmin
 #    - /bin/cp -R applications/gbdadmin/views $DEPLOYPATH
 #    - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/gbdadmin/config
