--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,11 +1,11 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/x447x173y962/public_html/applications/goelbookdepot/config
-    - /bin/cp -R applications/goelbookdepot/config/validation_rules.php $DEPLOYPATH
-#    - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
-#    - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
-#    - export DEPLOYPATH=/home/x447x173y962/public_html/
-#    - /bin/cp -R assets $DEPLOYPATH
+    - export DEPLOYPATH=/home/x447x173y962/public_html/applications/goelbookdepot/
+    - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
+    - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
+    - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
+    - export DEPLOYPATH=/home/x447x173y962/public_html/
+    - /bin/cp -R assets $DEPLOYPATH
 
 
