--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,13 +1,12 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/gbdadmin
-    - /bin/cp -R applications/gbdadmin/views $DEPLOYPATH
-#    - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/gbdadmin/config
-#    - /bin/cp -R applications/gbdadmin/config/development $DEPLOYPATH
-#      - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test/applications/goelbookdepot
-#      - /bin/cp -R applications/goelbookdepot/models $DEPLOYPATH
-#      - /bin/cp -R applications/goelbookdepot/controllers $DEPLOYPATH
-#      - /bin/cp -R applications/goelbookdepot/views $DEPLOYPATH
-#      - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test
-#      - /bin/cp -R assets $DEPLOYPATH
+    - export DEPLOYPATH=/home/izdhvsyt5yq0/public_html/
+    - /bin/cp -R applications $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
+    - /bin/cp -R system $DEPLOYPATH
+    - /bin/cp -R tests $DEPLOYPATH
+    - /bin/cp -R user_guide $DEPLOYPATH
+    - /bin/cp -R vendor $DEPLOYPATH
+    - /bin/cp -R admin.php $DEPLOYPATH
+    - /bin/cp -R index.php $DEPLOYPATH
