--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,9 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/z834o9vwc54a/public_html/applications/gbdadmin/config/production
-    - /bin/cp -R config.php $DEPLOYPATH
+    - export DEPLOYPATH=/home/z834o9vwc54a/public_html/
+    - /bin/cp -R applications $DEPLOYPATH
+    - /bin/cp -R system $DEPLOYPATH
+    - /bin/cp -R tests $DEPLOYPATH
+    - /bin/cp -R user_guide $DEPLOYPATH
+    - /bin/cp -R vendor $DEPLOYPATH
